--- a/atitya/package.json
+++ b/atitya/package.json
@@ -1,8 +1,17 @@
 {
   "name": "atitya",
   "version": "1.0.0",
-  "description": " ",
-  "author": "julienmalard <julien.malard@mail.mcgill.ca>",
+  "description": "Jawra k'olib'al rxin yikb'al ruxe'tzij na'ouj rxin k'utb'al samaj konxik tzrij Ya' Atitlán.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/julienmalard/Yikbalruxetzijnaoj.git"
+  },
+  "author": "Julien Malard <julien.malard@mail.mcgill.ca>, Mak'uux Ramírez",
+  "license": "AGPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/julienmalard/Yikbalruxetzijnaoj/issues"
+  },
+  "homepage": "https://github.com/julienmalard/Yikbalruxetzijnaoj#readme",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -13,6 +22,7 @@
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js"
   },
+
   "dependencies": {
     "express": "^4.17.1",
     "vue": "^2.5.2",
